fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Komentarze",
   "History": "Historia",
   "Insights": "Statystyki",
-  "Disable viewer insights": "Wyłącz informacje o oglądających",
-  "Enable viewer insights": "Włącz informacje o oglądających",
   "Leave document": "Opuść dokument",
   "You have left the shared document": "Opuściłeś udostępniony dokument",
   "Could not leave document": "Nie udało się opuścić dokumentu",
@@ -567,6 +565,7 @@
   "Rename": "Zmień nazwę",
   "Collection menu": "Menu kolekcji",
   "Comment options": "Opcje komentarza",
+  "Enable viewer insights": "Włącz informacje o oglądających",
   "Enable embeds": "Włącz osadzanie",
   "Document options": "Opcje dokumentu",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "wspomniał o tobie w",
   "left a comment on": "zostawił komentarz na",
   "resolved a comment on": "rozstrzygnął komentarz",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "udostępnione",
   "invited you to": "zaprosił cię do",
   "Choose a date": "Wybierz datę",
@@ -687,29 +687,24 @@
   "Restore version": "Przywróć wersję",
   "No history yet": "Nie ma jeszcze historii",
   "Source": "Źródło",
+  "Created": "Utworzono",
   "Imported from {{ source }}": "Zaimportowano z {{ source }}",
   "Stats": "Statystyki",
-  "{{ count }} minute read": "{{ count }} minuta czytania",
-  "{{ count }} minute read_plural": "{{ count }} minut(y) czytania",
-  "{{ count }} words": "{{ count }} słów",
-  "{{ count }} words_plural": "{{ count }} słów",
-  "{{ count }} characters": "{{ count }} znak",
-  "{{ count }} characters_plural": "{{ count }} znaków",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "Nie wybrano tekstu",
-  "{{ count }} words selected": "Zaznaczono {{ count }} słowa",
-  "{{ count }} words selected_plural": "Zaznaczono {{ count }} słów",
-  "{{ count }} characters selected": "Zaznaczono {{ count }} znaków",
-  "{{ count }} characters selected_plural": "Zaznaczono {{ count }} znaki",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Współtwórcy",
-  "Created": "Utworzono",
   "Creator": "Twórca",
   "Last edited": "Ostatnio edytowano",
   "Previously edited": "Poprzednio edytowane",
-  "No one else has viewed yet": "Nikt inny jeszcze nie oglądał",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Wyświetlono {{ count }} raz przez {{ teamMembers }} osób",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Wyświetlono {{ count }} razy przez {{ teamMembers }} osób",
-  "Viewer insights are disabled.": "Wgląd w dane przeglądających jest wyłączony",
   "Sorry, the last change could not be persisted – please reload the page": "Przepraszamy, nie udało się zachować ostatniej zmiany – proszę odświeżyć stronę",
   "{{ count }} days": "{{ count }} dzień",
   "{{ count }} days_plural": "{{ count }} dni",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Wspomniany",
   "Receive a notification when someone mentions you in a document or comment": "Otrzymuj powiadomienie, gdy ktoś wspomni o Tobie w dokumencie lub komentarzu",
   "Receive a notification when a comment thread you were involved in is resolved": "Otrzymaj powiadomienie, gdy wątek komentarza, w który byłeś zaangażowany, został rozwiązany",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Kolekcja utworzona",
   "Receive a notification whenever a new collection is created": "Otrzymuj powiadomienie o każdym utworzeniu nowej kolekcji",
   "Invite accepted": "Zaproszenie przyjęte",
