fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Comentários",
   "History": "Historia",
   "Insights": "Estatísticas",
-  "Disable viewer insights": "Desativar estatísticas do utilizador",
-  "Enable viewer insights": "Habilitar estatísticas do utilizador",
   "Leave document": "Leave document",
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
@@ -567,6 +565,7 @@
   "Rename": "Renomear",
   "Collection menu": "Menu de coleções",
   "Comment options": "Opções de comentário",
+  "Enable viewer insights": "Habilitar estatísticas do utilizador",
   "Enable embeds": "Ativar embeds",
   "Document options": "Opções do documento",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "mencionou-te em",
   "left a comment on": "deixou um comentário em",
   "resolved a comment on": "resolved a comment on",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "partilhado",
   "invited you to": "convidou-o para",
   "Choose a date": "Escolher data",
@@ -687,29 +687,24 @@
   "Restore version": "Restaurar versão",
   "No history yet": "Ainda sem histórico",
   "Source": "Fonte",
+  "Created": "Criado",
   "Imported from {{ source }}": "Importado do {{ source }}",
   "Stats": "Estatísticas",
-  "{{ count }} minute read": "Leitura de {{ count }} minuto",
-  "{{ count }} minute read_plural": "Leitura de {{ count }} minutos",
-  "{{ count }} words": "{{ count }} palavra",
-  "{{ count }} words_plural": "{{ count }} palavras",
-  "{{ count }} characters": "{{ count }} carater",
-  "{{ count }} characters_plural": "{{ count }} carateres",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "Nenhum texto selecionado",
-  "{{ count }} words selected": "{{ count }} palavra selecionada",
-  "{{ count }} words selected_plural": "{{ count }} palavras selecionadas",
-  "{{ count }} characters selected": "{{ count }} caracter selecionado",
-  "{{ count }} characters selected_plural": "{{ count }} caracteres selecionados",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Colaboradores",
-  "Created": "Criado",
   "Creator": "Autor",
   "Last edited": "Última alteração",
   "Previously edited": "Alterado anteriormente",
-  "No one else has viewed yet": "Mais ninguém viu até agora",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Visto {{ count }} vez por {{ teamMembers }} utilizador(es)",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Visto {{ count }} vezes por {{ teamMembers }} utilizador(es)",
-  "Viewer insights are disabled.": "Estatísticas de visualização inativas.",
   "Sorry, the last change could not be persisted – please reload the page": "Não foi possível manter a última alteração — recarregue a página",
   "{{ count }} days": "{{ count }} dia",
   "{{ count }} days_plural": "{{ count }} dias",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Mencionado",
   "Receive a notification when someone mentions you in a document or comment": "Receber notificação quando alguém o mencionar num documento ou comentário",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Coleção criada",
   "Receive a notification whenever a new collection is created": "Receber notificação sempre que novo documento for publicado",
   "Invite accepted": "Convite aceite",
