--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Kommentarer",
   "History": "Historik",
   "Insights": "Insikter",
-  "Disable viewer insights": "Inaktivera tittarinsikter",
-  "Enable viewer insights": "Aktivera tittarinsikter",
   "Leave document": "Lämna dokument",
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
@@ -567,6 +565,7 @@
   "Rename": "Döp om",
   "Collection menu": "Samlingsmeny",
   "Comment options": "Alternativ för kommentarer",
+  "Enable viewer insights": "Aktivera tittarinsikter",
   "Enable embeds": "Aktivera inbäddningar",
   "Document options": "Dokumentalternativ",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "nämnde dig i",
   "left a comment on": "lämnade en kommentar på",
   "resolved a comment on": "resolved a comment on",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "delad",
   "invited you to": "bjöd in dig till",
   "Choose a date": "Välj ett datum",
@@ -687,29 +687,24 @@
   "Restore version": "Återställ version",
   "No history yet": "Ingen historik än",
   "Source": "Källa",
+  "Created": "Skapad",
   "Imported from {{ source }}": "Importerad från {{ source }}",
   "Stats": "Statistik",
-  "{{ count }} minute read": "{{ count }} minuts läsning",
-  "{{ count }} minute read_plural": "{{ count }} minuters läsning",
-  "{{ count }} words": "{{ count }} ord",
-  "{{ count }} words_plural": "{{ count }} ord",
-  "{{ count }} characters": "{{ count }} tecken",
-  "{{ count }} characters_plural": "{{ count }} tecken",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "Ingen text har valts",
-  "{{ count }} words selected": "{{ count }} ord markerade",
-  "{{ count }} words selected_plural": "{{ count }} ord markerade",
-  "{{ count }} characters selected": "{{ count }} tecken markerade",
-  "{{ count }} characters selected_plural": "{{ count }} tecken markerade",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Bidragare",
-  "Created": "Skapad",
   "Creator": "Skapare",
   "Last edited": "Senast ändrad",
   "Previously edited": "Tidigare redigerad",
-  "No one else has viewed yet": "Ingen annan har visat ännu",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Visad {{ count }} gånger av {{ teamMembers }} personer",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Visade {{ count }} gånger av {{ teamMembers }} personer",
-  "Viewer insights are disabled.": "Insyn för tittare är inaktiverad.",
   "Sorry, the last change could not be persisted – please reload the page": "Tyvärr, den senaste ändringen kunde inte sparas– ladda om sidan",
   "{{ count }} days": "{{ count }} dag",
   "{{ count }} days_plural": "{{ count }} dagar",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Omnämnd",
   "Receive a notification when someone mentions you in a document or comment": "Få ett meddelande när någon nämner dig i ett dokument eller en kommentar",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Samling skapad",
   "Receive a notification whenever a new collection is created": "Få ett meddelande när en ny samling skapas",
   "Invite accepted": "Inbjudan: accepterad",
