fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Yorumlar",
   "History": "Geçmiş",
   "Insights": "İstatistikler",
-  "Disable viewer insights": "Görüntüleyici içgörülerini devre dışı bırak",
-  "Enable viewer insights": "İzleyici analizlerini etkinleştir",
   "Leave document": "Belgeden ayrıl",
   "You have left the shared document": "Paylaşılan belgeden ayrıldınız",
   "Could not leave document": "Could not leave document",
@@ -567,6 +565,7 @@
   "Rename": "Rename",
   "Collection menu": "Koleksiyon menüsü",
   "Comment options": "Yorum seçenekleri",
+  "Enable viewer insights": "İzleyici analizlerini etkinleştir",
   "Enable embeds": "Yerleştirmeleri etkinleştir",
   "Document options": "Belge ayarları",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "mentioned you in",
   "left a comment on": "left a comment on",
   "resolved a comment on": "resolved a comment on",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "shared",
   "invited you to": "invited you to",
   "Choose a date": "Choose a date",
@@ -687,29 +687,24 @@
   "Restore version": "Sürümü geri yükle",
   "No history yet": "Tarihçe yok",
   "Source": "Source",
+  "Created": "Oluşturuldu",
   "Imported from {{ source }}": "Imported from {{ source }}",
   "Stats": "İstatistikler",
-  "{{ count }} minute read": "{{ count }} dakikalık okuma",
-  "{{ count }} minute read_plural": "{{ count }} dakikalık okuma",
-  "{{ count }} words": "{{ count }} kelime",
-  "{{ count }} words_plural": "{{ count }} kelime",
-  "{{ count }} characters": "{{ count }} karakter",
-  "{{ count }} characters_plural": "{{ count }} karakter",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "Metin seçilmedi",
-  "{{ count }} words selected": "{{ count }} kelime seçildi",
-  "{{ count }} words selected_plural": "{{ count }} kelime seçildi",
-  "{{ count }} characters selected": "{{ count }} karakter seçildi",
-  "{{ count }} characters selected_plural": "{{ count }} karakter seçildi",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Katkıda Bulunanlar",
-  "Created": "Oluşturuldu",
   "Creator": "Oluşturan",
   "Last edited": "Son düzenlenme",
   "Previously edited": "Önceden düzenlenmiş",
-  "No one else has viewed yet": "Henüz başka kimse görüntülemedi",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "{{ teamMembers }} kişi tarafından {{ count }} kez görüntülendi",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "{{ teamMembers }} kişi tarafından {{ count }} kez görüntülendi",
-  "Viewer insights are disabled.": "Viewer insights are disabled.",
   "Sorry, the last change could not be persisted – please reload the page": "Üzgünüz, son değişiklik devam ettirilemedi - lütfen sayfayı yeniden yükleyin",
   "{{ count }} days": "{{ count }} day",
   "{{ count }} days_plural": "{{ count }} days",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Mentioned",
   "Receive a notification when someone mentions you in a document or comment": "Receive a notification when someone mentions you in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Koleksiyon oluşturuldu",
   "Receive a notification whenever a new collection is created": "Yeni bir koleksiyon oluşturulduğunda bildirim alın",
   "Invite accepted": "Invite accepted",
