fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Коментарі",
   "History": "Історія",
   "Insights": "Статистика",
-  "Disable viewer insights": "Вимкнути статистику перегляду",
-  "Enable viewer insights": "Увімкнути статистику перегляду",
   "Leave document": "Вийти з документа",
   "You have left the shared document": "Ви залишили спільний документ",
   "Could not leave document": "Не вдалося покинути документ",
@@ -567,6 +565,7 @@
   "Rename": "Rename",
   "Collection menu": "Меню колекцій",
   "Comment options": "Налаштування коментарів",
+  "Enable viewer insights": "Увімкнути статистику перегляду",
   "Enable embeds": "Увімкнути вкладення",
   "Document options": "Налаштування документа",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "згадав вас у",
   "left a comment on": "залишив коментар до",
   "resolved a comment on": "resolved a comment on",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "shared",
   "invited you to": "invited you to",
   "Choose a date": "Choose a date",
@@ -687,29 +687,24 @@
   "Restore version": "Відновити версію",
   "No history yet": "Ще немає історії",
   "Source": "Source",
+  "Created": "Створено",
   "Imported from {{ source }}": "Imported from {{ source }}",
   "Stats": "Статистика",
-  "{{ count }} minute read": "{{ count }} хв. читання",
-  "{{ count }} minute read_plural": "{{ count }} хв. читання",
-  "{{ count }} words": "{{ count }} слів",
-  "{{ count }} words_plural": "{{ count }} слів",
-  "{{ count }} characters": "{{ count }} символ",
-  "{{ count }} characters_plural": "{{ count }} символів",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} емодзі",
   "No text selected": "Не вибрано жодного тексту",
-  "{{ count }} words selected": "вибрано {{ count }} слово",
-  "{{ count }} words selected_plural": "вибрано {{ count }} слів",
-  "{{ count }} characters selected": "вибрано {{ count }} символ",
-  "{{ count }} characters selected_plural": "вибрано {{ count }} символів",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Співавтори",
-  "Created": "Створено",
   "Creator": "Автор",
   "Last edited": "Востаннє редаговано",
   "Previously edited": "Відредаговано раніше",
-  "No one else has viewed yet": "Ще ніхто не переглядав",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Переглянуто {{ count }} раз {{ teamMembers }} людьми",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Переглянуто {{ count }} разів {{ teamMembers }} людьми",
-  "Viewer insights are disabled.": "Viewer insights are disabled.",
   "Sorry, the last change could not be persisted – please reload the page": "На жаль, не вдалося зберегти останню зміну – перезавантажте сторінку",
   "{{ count }} days": "{{ count }} day",
   "{{ count }} days_plural": "{{ count }} days",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Згадано",
   "Receive a notification when someone mentions you in a document or comment": "Отримувати сповіщення, коли хтось згадує вас у документі чи коментарі",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Колекція створена",
   "Receive a notification whenever a new collection is created": "Отримувати сповіщення щоразу, коли публікується новий документ",
   "Invite accepted": "Запрошення прийнято",
