--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -105,8 +105,6 @@
   "Comments": "评论",
   "History": "历史记录",
   "Insights": "统计",
-  "Disable viewer insights": "禁用浏览者统计",
-  "Enable viewer insights": "启用浏览者统计",
   "Leave document": "离开文档",
   "You have left the shared document": "你已经离开了此共享文档",
   "Could not leave document": "无法离开文档",
@@ -567,6 +565,7 @@
   "Rename": "重命名",
   "Collection menu": "文档集菜单",
   "Comment options": "评论选项",
+  "Enable viewer insights": "启用浏览者统计",
   "Enable embeds": "启用嵌入",
   "Document options": "文档选项",
   "File": "文件",
@@ -606,6 +605,7 @@
   "mentioned you in": "提及你在",
   "left a comment on": "留下评论在",
   "resolved a comment on": "回复了一个评论于",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "已共享",
   "invited you to": "邀请你加入",
   "Choose a date": "选择一个日期",
@@ -687,29 +687,24 @@
   "Restore version": "恢复此版本",
   "No history yet": "暂无历史记录",
   "Source": "源",
+  "Created": "创建日期",
   "Imported from {{ source }}": "从 {{ source }} 导入",
   "Stats": "统计信息",
-  "{{ count }} minute read": "已读 {{ count }} 分钟",
-  "{{ count }} minute read_plural": "已读 {{ count }} 分钟",
-  "{{ count }} words": "{{ count }} 个词",
-  "{{ count }} words_plural": "{{ count }} 个词",
-  "{{ count }} characters": "{{ count }} 个字符",
-  "{{ count }} characters_plural": "{{ count }} 个字符",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} 个表情符号",
   "No text selected": "没有选定文本",
-  "{{ count }} words selected": "{{ count }} 个词已选择",
-  "{{ count }} words selected_plural": "{{ count }} 个词已选择",
-  "{{ count }} characters selected": "{{ count }} 个字符已选择",
-  "{{ count }} characters selected_plural": "{{ count }} 个字符已选择",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "贡献者",
-  "Created": "创建日期",
   "Creator": "创建者",
   "Last edited": "最后编辑者",
   "Previously edited": "上次编辑",
-  "No one else has viewed yet": "还没有其他人浏览过",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "{{ teamMembers }} 人浏览 {{ count }} 次",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "{{ teamMembers }} 人浏览 {{ count }} 次",
-  "Viewer insights are disabled.": "浏览者统计功能已禁用。",
   "Sorry, the last change could not be persisted – please reload the page": "抱歉，无法保存上次更改 - 请重新载入页面",
   "{{ count }} days": "{{ count }} 天",
   "{{ count }} days_plural": "{{ count }} 天",
@@ -1079,6 +1074,8 @@
   "Mentioned": "被提及",
   "Receive a notification when someone mentions you in a document or comment": "每当有人在文档或评论中提及你时收到通知",
   "Receive a notification when a comment thread you were involved in is resolved": "当您参与的评论帖子标记为解决时将收到通知",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "已创建文档集",
   "Receive a notification whenever a new collection is created": "每当创建新文档集时收到通知",
   "Invite accepted": "邀请已被接受",
