fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -105,8 +105,6 @@
   "Comments": "留言",
   "History": "歷史紀錄",
   "Insights": "洞察分析",
-  "Disable viewer insights": "停用瀏覽者洞察分析",
-  "Enable viewer insights": "啟用瀏覽者洞察分析",
   "Leave document": "離開文件",
   "You have left the shared document": "您離開了共享的文件",
   "Could not leave document": "無法離開文件",
@@ -567,6 +565,7 @@
   "Rename": "重新命名",
   "Collection menu": "文件集選單",
   "Comment options": "評論選項",
+  "Enable viewer insights": "啟用瀏覽者洞察分析",
   "Enable embeds": "啟用嵌入物件",
   "Document options": "文件選項",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "提到了您:",
   "left a comment on": "發表評論",
   "resolved a comment on": "標記評論為已解決",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "已分享",
   "invited you to": "邀請您到",
   "Choose a date": "選擇日期",
@@ -687,29 +687,24 @@
   "Restore version": "還原版本",
   "No history yet": "暫無歷史紀錄",
   "Source": "來源",
+  "Created": "建立日期",
   "Imported from {{ source }}": "從 {{ source }} 匯入",
   "Stats": "統計",
-  "{{ count }} minute read": "{{ count }} 分鐘閲讀時長",
-  "{{ count }} minute read_plural": "{{ count }} 分鐘閲讀時長",
-  "{{ count }} words": "{{ count }} 字",
-  "{{ count }} words_plural": "{{ count }} 字",
-  "{{ count }} characters": "{{ count }} 字",
-  "{{ count }} characters_plural": "{{ count }} 字",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} 個表情符號",
   "No text selected": "尚未選擇任何文字",
-  "{{ count }} words selected": "已選擇 {{ count }} 個字",
-  "{{ count }} words selected_plural": "已選擇 {{ count }} 個字",
-  "{{ count }} characters selected": "已選擇 {{ count }} 個字",
-  "{{ count }} characters selected_plural": "已選擇 {{ count }} 個字",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "貢獻者",
-  "Created": "建立日期",
   "Creator": "建立者",
   "Last edited": "最後編輯於",
   "Previously edited": "先前編輯過",
-  "No one else has viewed yet": "尚未有人查看",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "{{ teamMembers }} 人共瀏覽過 {{ count }} 次",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "{{ teamMembers }} 人共瀏覽過 {{ count }} 次",
-  "Viewer insights are disabled.": "檢視者洞察功能已停用。",
   "Sorry, the last change could not be persisted – please reload the page": "抱歉，無法保留上次更改 - 請重新加載頁面",
   "{{ count }} days": "{{ count }} 天",
   "{{ count }} days_plural": "{{ count }} 天",
@@ -1079,6 +1074,8 @@
   "Mentioned": "提及到",
   "Receive a notification when someone mentions you in a document or comment": "當有人在文件或評論中提及您時收到通知",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "文件集已建立",
   "Receive a notification whenever a new collection is created": "當新的文件集建立時接收通知",
   "Invite accepted": "邀請已被接受",
