fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Bình luận",
   "History": "Lịch sử",
   "Insights": "Thông tin chi tiết",
-  "Disable viewer insights": "Tắt thông tin chi tiết của người xem",
-  "Enable viewer insights": "Bật thông tin chi tiết về người xem",
   "Leave document": "Rời khỏi tài liệu",
   "You have left the shared document": "Bạn đã rời khỏi tài liệu chia sẻ",
   "Could not leave document": "Không thể rời tài liệu này",
@@ -567,6 +565,7 @@
   "Rename": "Đổi tên",
   "Collection menu": "Menu bộ sưu tập",
   "Comment options": "Tùy chọn bình luận",
+  "Enable viewer insights": "Bật thông tin chi tiết về người xem",
   "Enable embeds": "Bật tính năng nhúng",
   "Document options": "Tùy chọn tài liệu",
   "File": "Tập tin",
@@ -606,6 +605,7 @@
   "mentioned you in": "mentioned you in",
   "left a comment on": "left a comment on",
   "resolved a comment on": "resolved a comment on",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "được chia sẻ",
   "invited you to": "invited you to",
   "Choose a date": "Choose a date",
@@ -687,29 +687,24 @@
   "Restore version": "Khôi phục phiên bản",
   "No history yet": "Chưa có lịch sử",
   "Source": "Nguồn",
+  "Created": "Được tạo",
   "Imported from {{ source }}": "Imported from {{ source }}",
   "Stats": "Thống Kê",
-  "{{ count }} minute read": "{{ count }} phút để đọc",
-  "{{ count }} minute read_plural": "{{ count }} phút để đọc",
-  "{{ count }} words": "{{ count }} từ",
-  "{{ count }} words_plural": "{{ count }} từ",
-  "{{ count }} characters": "{{ count }} ký tự",
-  "{{ count }} characters_plural": "{{ count }} ký tự",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} biểu tượng cảm xúc",
   "No text selected": "Không có văn bản nào được chọn",
-  "{{ count }} words selected": "{{ count }} từ được chọn",
-  "{{ count }} words selected_plural": "{{ count }} từ được chọn",
-  "{{ count }} characters selected": "{{ count }} ký tự được chọn",
-  "{{ count }} characters selected_plural": "{{ count }} ký tự được chọn",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Người đóng góp",
-  "Created": "Được tạo",
   "Creator": "Tạo bởi",
   "Last edited": "Sửa lần cuối",
   "Previously edited": "Chỉnh sửa trước đó",
-  "No one else has viewed yet": "Chưa có ai khác xem",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Đã xem {{ count }} lần bởi {{ teamMembers }} người",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Đã xem {{ count }} lần bởi {{ teamMembers }} người",
-  "Viewer insights are disabled.": "Viewer insights are disabled.",
   "Sorry, the last change could not be persisted – please reload the page": "Xin lỗi, không thể tiếp tục thay đổi cuối cùng - vui lòng tải lại trang",
   "{{ count }} days": "{{ count }} day",
   "{{ count }} days_plural": "{{ count }} days",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Được nhắc đến",
   "Receive a notification when someone mentions you in a document or comment": "Nhận thông báo khi ai đó đề cập đến bạn trong tài liệu hoặc nhận xét",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Bộ sưu tập đã được tạo",
   "Receive a notification whenever a new collection is created": "Nhận thông báo bất cứ khi nào một bộ sưu tập mới được tạo",
   "Invite accepted": "Đã chấp nhận Lời mời",
