--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Comentários",
   "History": "Histórico",
   "Insights": "Estatísticas",
-  "Disable viewer insights": "Desabilitar Estatísticas de Visualização",
-  "Enable viewer insights": "Habilitar Estatísticas de Visualização",
   "Leave document": "Sair do documento",
   "You have left the shared document": "Você deixou o documento compartilhado",
   "Could not leave document": "Não foi possível sair do documento",
@@ -567,6 +565,7 @@
   "Rename": "Renomear",
   "Collection menu": "Menu da coleção",
   "Comment options": "Opções de comentário",
+  "Enable viewer insights": "Habilitar Estatísticas de Visualização",
   "Enable embeds": "Habilitar incorporações",
   "Document options": "Opções do documento",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "mencionou você em",
   "left a comment on": "deixou um comentário em",
   "resolved a comment on": "resolveu um comentário em",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "compartilhado",
   "invited you to": "convidou você para",
   "Choose a date": "Escolha uma data",
@@ -687,29 +687,24 @@
   "Restore version": "Restaurar versão",
   "No history yet": "Sem histórico por enquanto",
   "Source": "Fonte",
+  "Created": "Criado",
   "Imported from {{ source }}": "Importado de {{ source }}",
   "Stats": "Estatísticas",
-  "{{ count }} minute read": "{{ count }} minuto de leitura",
-  "{{ count }} minute read_plural": "{{ count }} minutos de leitura",
-  "{{ count }} words": "{{ count }} palavra",
-  "{{ count }} words_plural": "{{ count }} palavras",
-  "{{ count }} characters": "{{ count }} caractere",
-  "{{ count }} characters_plural": "{{ count }} caracteres",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoticons",
   "No text selected": "Nenhum texto selecionado",
-  "{{ count }} words selected": "{{ count }} palavra selecionada",
-  "{{ count }} words selected_plural": "{{ count }} palavras selecionadas",
-  "{{ count }} characters selected": "{{ count }} caractere selecionado",
-  "{{ count }} characters selected_plural": "{{ count }} caracteres selecionados",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Contribuidores",
-  "Created": "Criado",
   "Creator": "Autor",
   "Last edited": "Última edição",
   "Previously edited": "Editou anteriormente",
-  "No one else has viewed yet": "Ninguém mais visualizou ainda",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Visualizado {{ count }} vez por {{ teamMembers }} pessoa",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Visualizado {{ count }} vezes por {{ teamMembers }} pessoas",
-  "Viewer insights are disabled.": "As estatísticas de visualização estão desativadas.",
   "Sorry, the last change could not be persisted – please reload the page": "Desculpe, a última alteração não pôde ser salva — por favor, recarregue a página",
   "{{ count }} days": "{{ count }} dia",
   "{{ count }} days_plural": "{{ count }} dias",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Mencionado",
   "Receive a notification when someone mentions you in a document or comment": "Receba uma notificação quando alguém mencionar você em um documento ou comentário",
   "Receive a notification when a comment thread you were involved in is resolved": "Receber uma notificação quando um tópico de comentários em que você participou for resolvido",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Coleção criada",
   "Receive a notification whenever a new collection is created": "Receba uma notificação sempre que uma nova coleção for criada",
   "Invite accepted": "Convite aceito",
