fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Komentar",
   "History": "Riwayat",
   "Insights": "Wawasan",
-  "Disable viewer insights": "Disable viewer insights",
-  "Enable viewer insights": "Enable viewer insights",
   "Leave document": "Leave document",
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
@@ -567,6 +565,7 @@
   "Rename": "Rename",
   "Collection menu": "Menu koleksi",
   "Comment options": "Opsi komentar",
+  "Enable viewer insights": "Enable viewer insights",
   "Enable embeds": "Aktifkan penyematan",
   "Document options": "Opsi dokumen",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "mentioned you in",
   "left a comment on": "left a comment on",
   "resolved a comment on": "resolved a comment on",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "shared",
   "invited you to": "invited you to",
   "Choose a date": "Choose a date",
@@ -687,29 +687,24 @@
   "Restore version": "Pulihkan versi",
   "No history yet": "Belum ada riwayat",
   "Source": "Source",
+  "Created": "Dibuat",
   "Imported from {{ source }}": "Imported from {{ source }}",
   "Stats": "Statistik",
-  "{{ count }} minute read": "{{ count }} menit membaca",
-  "{{ count }} minute read_plural": "{{ count }} menit membaca",
-  "{{ count }} words": "{{ count }} kata",
-  "{{ count }} words_plural": "{{ count }} kata",
-  "{{ count }} characters": "{{ count }} karakter",
-  "{{ count }} characters_plural": "{{ count }} karakter",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "Tidak ada teks yang dipilih",
-  "{{ count }} words selected": "{{ count }} kata terpilih",
-  "{{ count }} words selected_plural": "{{ count }} kata terpilih",
-  "{{ count }} characters selected": "{{ count }} karakter terpilih",
-  "{{ count }} characters selected_plural": "{{ count }} karakter terpilih",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Kontributor",
-  "Created": "Dibuat",
   "Creator": "Pembuat",
   "Last edited": "Terakhir disunting",
   "Previously edited": "Sebelumnya diedit",
-  "No one else has viewed yet": "Belum ada orang lain yang melihat",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Dilihat {{ count }} kali oleh {{ teamMembers }} orang",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Dilihat {{ count }} kali oleh {{ teamMembers }} orang",
-  "Viewer insights are disabled.": "Viewer insights are disabled.",
   "Sorry, the last change could not be persisted – please reload the page": "Maaf, perubahan terakhir tidak dapat disimpan – muat ulang halaman",
   "{{ count }} days": "{{ count }} day",
   "{{ count }} days_plural": "{{ count }} days",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Di-mention",
   "Receive a notification when someone mentions you in a document or comment": "Terima pemberitahuan ketika seseorang me-mention Anda dalam dokumen atau komentar",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Koleksi dibuat",
   "Receive a notification whenever a new collection is created": "Terima pemberitahuan setiap kali koleksi baru dibuat",
   "Invite accepted": "Undangan diterima",
