--- a/shared/i18n/locales/en_GB/translation.json
+++ b/shared/i18n/locales/en_GB/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Comments",
   "History": "History",
   "Insights": "Insights",
-  "Disable viewer insights": "Disable viewer insights",
-  "Enable viewer insights": "Enable viewer insights",
   "Leave document": "Leave document",
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
@@ -567,6 +565,7 @@
   "Rename": "Rename",
   "Collection menu": "Collection menu",
   "Comment options": "Comment options",
+  "Enable viewer insights": "Enable viewer insights",
   "Enable embeds": "Enable embeds",
   "Document options": "Document options",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "mentioned you in",
   "left a comment on": "left a comment on",
   "resolved a comment on": "resolved a comment on",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "shared",
   "invited you to": "invited you to",
   "Choose a date": "Choose a date",
@@ -687,29 +687,24 @@
   "Restore version": "Restore version",
   "No history yet": "No history yet",
   "Source": "Source",
+  "Created": "Created",
   "Imported from {{ source }}": "Imported from {{ source }}",
   "Stats": "Stats",
-  "{{ count }} minute read": "{{ count }} minute read",
-  "{{ count }} minute read_plural": "{{ count }} minute read",
-  "{{ count }} words": "{{ count }} word",
-  "{{ count }} words_plural": "{{ count }} words",
-  "{{ count }} characters": "{{ count }} character",
-  "{{ count }} characters_plural": "{{ count }} characters",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "No text selected",
-  "{{ count }} words selected": "{{ count }} word selected",
-  "{{ count }} words selected_plural": "{{ count }} words selected",
-  "{{ count }} characters selected": "{{ count }} character selected",
-  "{{ count }} characters selected_plural": "{{ count }} characters selected",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Contributors",
-  "Created": "Created",
   "Creator": "Creator",
   "Last edited": "Last edited",
   "Previously edited": "Previously edited",
-  "No one else has viewed yet": "No one else has viewed yet",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Viewed {{ count }} time by {{ teamMembers }} people",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Viewed {{ count }} times by {{ teamMembers }} people",
-  "Viewer insights are disabled.": "Viewer insights are disabled.",
   "Sorry, the last change could not be persisted – please reload the page": "Sorry, the last change could not be persisted – please reload the page",
   "{{ count }} days": "{{ count }} day",
   "{{ count }} days_plural": "{{ count }} days",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Mentioned",
   "Receive a notification when someone mentions you in a document or comment": "Receive a notification when someone mentions you in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Collection created",
   "Receive a notification whenever a new collection is created": "Receive a notification whenever a new collection is created",
   "Invite accepted": "Invite accepted",
