fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Kommentarer",
   "History": "Historikk",
   "Insights": "Innsikt",
-  "Disable viewer insights": "Deaktiver leserinnsikt",
-  "Enable viewer insights": "Aktiver leserinnsikt",
   "Leave document": "Forlat dokument",
   "You have left the shared document": "Du har forlatt det delte dokumentet",
   "Could not leave document": "Kunne ikke forlate dokument",
@@ -567,6 +565,7 @@
   "Rename": "Gi nytt navn",
   "Collection menu": "Samlingsmeny",
   "Comment options": "Kommentaralternativer",
+  "Enable viewer insights": "Aktiver leserinnsikt",
   "Enable embeds": "Aktiver innebygginger",
   "Document options": "Dokumentalternativer",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "nevnte deg i",
   "left a comment on": "la igjen en kommentar på",
   "resolved a comment on": "løste en kommentar på",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "delt",
   "invited you to": "inviterte deg til",
   "Choose a date": "Velg en dato",
@@ -687,29 +687,24 @@
   "Restore version": "Gjenopprett versjon",
   "No history yet": "Ingen historikk ennå",
   "Source": "Kilde",
+  "Created": "Opprettet",
   "Imported from {{ source }}": "Importert fra {{ source }}",
   "Stats": "Statistikk",
-  "{{ count }} minute read": "{{ count }} minutts lesning",
-  "{{ count }} minute read_plural": "{{ count }} minutters lesning",
-  "{{ count }} words": "{{ count }} ord",
-  "{{ count }} words_plural": "{{ count }} ord",
-  "{{ count }} characters": "{{ count }} tegn",
-  "{{ count }} characters_plural": "{{ count }} tegn",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "Ingen tekst valgt",
-  "{{ count }} words selected": "{{ count }} ord valgt",
-  "{{ count }} words selected_plural": "{{ count }} ord valgt",
-  "{{ count }} characters selected": "{{ count }} tegn valgt",
-  "{{ count }} characters selected_plural": "{{ count }} tegn valgt",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Bidragsytere",
-  "Created": "Opprettet",
   "Creator": "Oppretter",
   "Last edited": "Sist redigert",
   "Previously edited": "Tidligere redigert",
-  "No one else has viewed yet": "Ingen andre har sett ennå",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Vist {{ count }} ganger av {{ teamMembers }} personer",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Vist {{ count }} ganger av {{ teamMembers }} personer",
-  "Viewer insights are disabled.": "Visningsinnsikt er deaktivert.",
   "Sorry, the last change could not be persisted – please reload the page": "Beklager, den siste endringen kunne ikke lagres – vennligst last inn siden på nytt",
   "{{ count }} days": "{{ count }} dag",
   "{{ count }} days_plural": "{{ count }} dager",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Nevnt",
   "Receive a notification when someone mentions you in a document or comment": "Motta en varsling når noen nevner deg i et dokument eller en kommentar",
   "Receive a notification when a comment thread you were involved in is resolved": "Motta et varsel når en kommentartråd du deltok i er løst",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Samling opprettet",
   "Receive a notification whenever a new collection is created": "Motta en varsling når en ny samling opprettes",
   "Invite accepted": "Invitasjon akseptert",
