fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -105,8 +105,6 @@
   "Comments": "댓글",
   "History": "히스토리",
   "Insights": "문서 정보",
-  "Disable viewer insights": "뷰어 정보 비활성화",
-  "Enable viewer insights": "뷰어 정보 활성화",
   "Leave document": "문서 나가기",
   "You have left the shared document": "공유 문서 나갔습니다",
   "Could not leave document": "문서를 나갈 수 없습니다",
@@ -567,6 +565,7 @@
   "Rename": "이름변경",
   "Collection menu": "컬렉션 메뉴",
   "Comment options": "댓글 옵션",
+  "Enable viewer insights": "뷰어 정보 활성화",
   "Enable embeds": "임베드 활성화",
   "Document options": "문서 옵션",
   "File": "파일",
@@ -606,6 +605,7 @@
   "mentioned you in": "당신을 언급했습니다",
   "left a comment on": "댓글을 남겼습니다",
   "resolved a comment on": "에 대한 댓글이 해결됨",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "공유됨",
   "invited you to": "당신을 초대하였습니다:",
   "Choose a date": "날짜를 선택하세요",
@@ -687,29 +687,24 @@
   "Restore version": "버전 복원",
   "No history yet": "아직 기록이 없습니다",
   "Source": "원본",
+  "Created": "생성됨",
   "Imported from {{ source }}": "{{ source }} 로부터 불러옴",
   "Stats": "통계",
-  "{{ count }} minute read": "{{ count }} 분 읽기",
-  "{{ count }} minute read_plural": "{{ count }} 분 읽기",
-  "{{ count }} words": "{{ count }} 개 단어",
-  "{{ count }} words_plural": "{{ count }} 개 단어",
-  "{{ count }} characters": "{{ count }} 개 문자",
-  "{{ count }} characters_plural": "{{ count }} 개 문자",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} 이모티콘",
   "No text selected": "선택된 텍스트 없음",
-  "{{ count }} words selected": "{{ count }} 단어 선택됨",
-  "{{ count }} words selected_plural": "{{ count }} 단어 선택됨",
-  "{{ count }} characters selected": "{{ count }} 개의 문자가 선택됨",
-  "{{ count }} characters selected_plural": "{{ count }} 개의 문자가 선택됨",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "기여자",
-  "Created": "생성됨",
   "Creator": "생성자",
   "Last edited": "마지막으로 수정됨",
   "Previously edited": "이전에 수정됨",
-  "No one else has viewed yet": "아직 다른 사람이 보지 않았습니다.",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "{{ teamMembers }} 명에 의해 {{ count }} 회 조회됨",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "{{ teamMembers }} 명에 의해 {{ count }} 회 조회됨",
-  "Viewer insights are disabled.": "열람자 정보가 비활성화되었습니다.",
   "Sorry, the last change could not be persisted – please reload the page": "죄송합니다. 마지막 변경 사항을 유지할 수 없습니다. 페이지를 새로고침하세요.",
   "{{ count }} days": "{{ count }} 일",
   "{{ count }} days_plural": "{{ count }} 일",
@@ -1079,6 +1074,8 @@
   "Mentioned": "언급됨",
   "Receive a notification when someone mentions you in a document or comment": "다른 사람이 문서나 댓글에서 나를 언급하면 알림을 받습니다.",
   "Receive a notification when a comment thread you were involved in is resolved": "참여한 댓글 스레드가 해결되었을 때 알림을 받습니다.",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "컬렉션 생성됨",
   "Receive a notification whenever a new collection is created": "새 컬렉션이 생성될 때마다 알림을 받습니다",
   "Invite accepted": "초대 수락됨",
